在Seq2Seq中加入了teacher_forcing优化，看看需要测试看看结果。

--- a/jupyterlab/Simple_Seq2Seq.ipynb
+++ b/jupyterlab/Simple_Seq2Seq.ipynb
@@ -144,6 +144,8 @@
     "        self.output_dim = output_dim\n",
     "        self.num_layers = num_layers\n",
     "        \n",
+    "        self.fc_in = nn.Linear(input_dim, hidden_dim)\n",
+    "        \n",
     "        self.lstm = nn.LSTM(input_size=self.hidden_dim, hidden_size=self.hidden_dim, num_layers=self.num_layers, batch_first=True, dropout=dropout)\n",
     "        \n",
     "        self.fc_out = nn.Linear(hidden_dim, output_dim)\n",
@@ -157,6 +159,8 @@
     "        # print(\"Decoder forward() input size : {}\".format(input.shape))\n",
     "        # print(\"Decoder forward() hidden size: {}\".format(hidden.shape))\n",
     "        # print(\"Decoder forward() cell size  : {}\".format(cell.shape))\n",
+    "        \n",
+    "        input = self.fc_in(input)\n",
     "\n",
     "        lstm_output, (hidden, cell) = self.lstm(input, (hidden, cell))\n",
     "        \n",
@@ -178,12 +182,14 @@
    "source": [
     "# Tain the model\n",
     "\n",
-    "INPUT_DIM = 117\n",
-    "HIDDEN_DIM = 768\n",
-    "OUPUT_DIM = 1\n",
-    "NUM_LAYERS = 2\n",
-    "ENC_DROPOUT = 0.5\n",
-    "DEC_DROPOUT = 0.5\n",
+    "ENC_INPUT_DIM   = 117\n",
+    "ENC_HIDDEN_DIM  = 768\n",
+    "DEC_INPUT_DIM   = 1\n",
+    "DEC_HIDDEN_DIM  = 768\n",
+    "DEC_OUPUT_DIM   = 1\n",
+    "NUM_LAYERS      = 2\n",
+    "ENC_DROPOUT     = 0.5\n",
+    "DEC_DROPOUT     = 0.5\n",
     "\n",
     "\n",
     "class Seq2Seq(nn.Module):\n",
@@ -192,9 +198,9 @@
     "        self.encoder = encoder\n",
     "        self.decoder = decoder\n",
     "        \n",
-    "        self.decoder_fc_init= nn.Linear(encoder.input_dim, decoder.input_dim)\n",
+    "#         self.decoder_fc_init= nn.Linear(encoder.input_dim, decoder.input_dim)\n",
     "        \n",
-    "        self.decoder_fc_input= nn.Linear(decoder.output_dim, decoder.input_dim)\n",
+    "#         self.decoder_fc_input= nn.Linear(decoder.output_dim, decoder.input_dim)\n",
     "        \n",
     "        assert (encoder.hidden_dim == decoder.hidden_dim), \"hidden dimension in encoder and decoder must be equal\"       \n",
     "        assert (encoder.num_layers == decoder.num_layers), \"hidden layer numbers in encoder and decoder must be equal\"\n",
@@ -203,8 +209,8 @@
     "    def forward(self, x, y):\n",
     "        # x is the input to the encoder.\n",
     "        # y is the output from the decoder\n",
-    "        # x = [batch size, input_sequence_len, input_in_dim]              input_sequence_len=45, input_in_dim=117\n",
-    "        # y = [batch size, target_sequence_len, feature size]             target_sequence_len=5, target_in_dim=768\n",
+    "        # x = [batch size, encoder_in_sequence_len, encoder_in_dim]               encoder_in_sequence_len=45, encoder_in_dim=117\n",
+    "        # y = [batch size, decoder_out_sequence_len, decoder_out_dim]             decoder_out_sequence_len=45, decoder_out_dim=1\n",
     "        \n",
     "        # print(\"Seq2Seq forwar() x shape : {}\".format(x.shape))\n",
     "        # print(\"Seq2Seq forwar() y shape : {}\".format(y.shape))\n",
@@ -214,10 +220,10 @@
     "        encoder_in_dim = x.shape[2]\n",
     "        \n",
     "        decoder_in_dim = y.shape[2]\n",
-    "        target_seq_len = y.shape[1]\n",
+    "        decoder_out_seq_len = y.shape[1]\n",
     "        \n",
     "        # tensor to store decoder outputs of each time step\n",
-    "        outputs = torch.zeros(target_seq_len).double().to(device)\n",
+    "        outputs = torch.zeros(decoder_out_seq_len).double().to(device)\n",
     "        # print(\"Seq2Seq forward() outputs shape: {}\".format(outputs.shape))\n",
     "        \n",
     "        encoder_output, hidden, cell = self.encoder(x)\n",
@@ -225,13 +231,12 @@
     "        # print(\"Seq2Seq forward() x[-1,-1,:] shape : {}\".format(x[-1,-1,:].shape))\n",
     "        # first input to decoder may be last coordinates of x\n",
     "        # this is last batch and last word of sequence.\n",
-    "        decoder_input = self.decoder_fc_init(x[-1, -1, :])\n",
+    "        decoder_input = torch.zeros(self.decoder.input_dim).double().to(device)\n",
     "        \n",
     "        # decoder_input = torch.zeros(batch_size, seq_len, OUPUT_DIM).double().to(device)\n",
     "        # print(\"Seq2Seq forward() encoder_output shape : {}\".format(encoder_output.shape))\n",
     "        \n",
     "        # print(\"Seq2Seq forward() decoder_input shape: {}\".format(decoder_input.shape))\n",
-    "        \n",
     "        decoder_input = decoder_input.unsqueeze(0)\n",
     "        decoder_input = decoder_input.unsqueeze(0)\n",
     "        # print(\"Seq2Seq forward() decoder_input shape: {}\".format(decoder_input.shape))\n",
@@ -239,7 +244,7 @@
     "        \n",
     "        # Becasue the input and target have different sequence length\n",
     "        # Get the target prediction one by one\n",
-    "        for i in range(target_seq_len):\n",
+    "        for i in range(decoder_out_seq_len):\n",
     "            # run the decoder for one time step\n",
     "            output, hidden, cell = self.decoder(decoder_input, hidden, cell)\n",
     "            # print(\"Seq2Seq forward() output shape: {}\".format(output.shape))\n",
@@ -249,8 +254,13 @@
     "            \n",
     "            # output is the same shape as input, [batch_size, feature size]\n",
     "            # so we can use output directly as next input\n",
-    "            decoder_input = self.decoder_fc_input(output)\n",
+    "            decoder_input = output\n",
     "            # print(\"Seq2Seq forward() decoder_input shape: {}\".format(output.shape))\n",
+    "            \n",
+    "            # 或者使用teacher_forcing来优化\n",
+    "            # teacher_forcing_ratio=0.5\n",
+    "            # teacher_force = random.random() < teacher_forcing_ratio\n",
+    "            # decoder_input = y[i] if teacher_forcing else output\n",
     "            \n",
     "        return outputs\n",
     "        "
@@ -264,8 +274,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "encoder = Encoder(input_dim=INPUT_DIM, hidden_dim=HIDDEN_DIM, num_layers=NUM_LAYERS, dropout=ENC_DROPOUT)\n",
-    "decoder = Decoder(input_dim=HIDDEN_DIM, hidden_dim=HIDDEN_DIM, num_layers=NUM_LAYERS, output_dim=OUPUT_DIM, dropout=DEC_DROPOUT)\n",
+    "encoder = Encoder(input_dim=ENC_INPUT_DIM, hidden_dim=ENC_HIDDEN_DIM, num_layers=NUM_LAYERS, dropout=ENC_DROPOUT)\n",
+    "decoder = Decoder(input_dim=DEC_INPUT_DIM, hidden_dim=DEC_HIDDEN_DIM, num_layers=NUM_LAYERS, output_dim=DEC_OUPUT_DIM, dropout=DEC_DROPOUT)\n",
     "\n",
     "model = Seq2Seq(encoder, decoder).to(device)\n"
    ]
@@ -292,98 +302,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Mar  3 14:26:40 2022\n",
-      "9 of 100 epoch loss: 0.000345\n",
-      "Prediction: tensor([[[ 0.0012],\n",
-      "         [-0.0001],\n",
-      "         [ 0.0039],\n",
-      "         [ 0.0079],\n",
-      "         [-0.0046],\n",
-      "         [-0.0002],\n",
-      "         [-0.0030],\n",
-      "         [-0.0006],\n",
-      "         [-0.0047],\n",
-      "         [-0.0110],\n",
-      "         [-0.0017],\n",
-      "         [ 0.0018],\n",
-      "         [ 0.0031],\n",
-      "         [-0.0055],\n",
-      "         [-0.0042],\n",
-      "         [ 0.0012],\n",
-      "         [-0.0007],\n",
-      "         [-0.0003],\n",
-      "         [-0.0019],\n",
-      "         [-0.0047],\n",
-      "         [-0.0060],\n",
-      "         [-0.0041],\n",
-      "         [-0.0011],\n",
-      "         [ 0.0041],\n",
-      "         [ 0.0009],\n",
-      "         [ 0.0028],\n",
-      "         [-0.0042],\n",
-      "         [-0.0071],\n",
-      "         [ 0.0005],\n",
-      "         [ 0.0007],\n",
-      "         [-0.0036],\n",
-      "         [ 0.0027],\n",
-      "         [-0.0009],\n",
-      "         [-0.0031],\n",
-      "         [-0.0029],\n",
-      "         [-0.0024],\n",
-      "         [-0.0068],\n",
-      "         [ 0.0002],\n",
-      "         [ 0.0016],\n",
-      "         [-0.0088],\n",
-      "         [ 0.0013],\n",
-      "         [-0.0079],\n",
-      "         [ 0.0026],\n",
-      "         [-0.0024],\n",
-      "         [-0.0011]]], device='cuda:0', dtype=torch.float64)\n",
-      "Actual Res: tensor([[[-0.0217],\n",
-      "         [-0.0081],\n",
-      "         [-0.0102],\n",
-      "         [-0.0041],\n",
-      "         [-0.0021],\n",
-      "         [ 0.0166],\n",
-      "         [-0.0081],\n",
-      "         [ 0.0041],\n",
-      "         [ 0.0082],\n",
-      "         [-0.0020],\n",
-      "         [ 0.0346],\n",
-      "         [-0.0118],\n",
-      "         [-0.0815],\n",
-      "         [-0.0022],\n",
-      "         [-0.0217],\n",
-      "         [ 0.0089],\n",
-      "         [-0.0044],\n",
-      "         [-0.0022],\n",
-      "         [-0.0199],\n",
-      "         [-0.0158],\n",
-      "         [-0.0023],\n",
-      "         [-0.0207],\n",
-      "         [ 0.0047],\n",
-      "         [ 0.0327],\n",
-      "         [ 0.0068],\n",
-      "         [ 0.0157],\n",
-      "         [-0.0066],\n",
-      "         [-0.0089],\n",
-      "         [-0.0067],\n",
-      "         [ 0.0090],\n",
-      "         [-0.0022],\n",
-      "         [ 0.0157],\n",
-      "         [ 0.0022],\n",
-      "         [ 0.0000],\n",
-      "         [ 0.0000],\n",
-      "         [-0.0155],\n",
-      "         [ 0.0157],\n",
-      "         [-0.0088],\n",
-      "         [-0.0067],\n",
-      "         [ 0.0247],\n",
-      "         [-0.0066],\n",
-      "         [ 0.0022],\n",
-      "         [-0.0088],\n",
-      "         [-0.0133],\n",
-      "         [-0.0090]]], device='cuda:0', dtype=torch.float64)\n"
+      "Thu Mar  3 15:29:00 2022\n",
+      "9 of 100 epoch loss: 0.000313\n",
+      "19 of 100 epoch loss: 0.000317\n",
+      "29 of 100 epoch loss: 0.000339\n"
      ]
     }
    ],
