--- a/jupyterlab/Model_Seq2Seq.ipynb
+++ b/jupyterlab/Model_Seq2Seq.ipynb
@@ -56,13 +56,12 @@
     "# print(dataset.columns)\n",
     "# print(dataset.tail())\n",
     "dataset['future'] = dataset['future']\n",
-    "print(dataset.shape)\n",
+    "# print(dataset.shape)\n",
     "# print(dataset.tail())\n",
     "\n",
     "\n",
     "# 将数据按照BATCH_SIZE的窗口进行滑动，每个窗口数据做一组\n",
-    "# # 数据转成sequence的格式，这里定义每个seq的长度\n",
-    "SEQ_LENGTH = 60\n",
+    "SEQ_LENGTH = 60                                                   # 数据转成sequence的格式，这里定义每个seq的长度\n",
     "BATCH_SIZE = 1                                                    # 注意：BATCH_SIZE是要能够整除seq_count的\n",
     "TEST_BATCH_COUNT = 3\n",
     "\n",
@@ -118,6 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the Encoder & Decoder class\n",
+    "\n",
     "class Encoder(nn.Module):\n",
     "    def __init__(self, input_dim, hidden_dim, num_layers, dropout):\n",
     "        super().__init__()\n",
@@ -180,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tain the model\n",
+    "# Define the model class\n",
     "\n",
     "ENC_INPUT_DIM   = dataset.shape[1]-1\n",
     "ENC_HIDDEN_DIM  = 768\n",
@@ -219,7 +220,7 @@
     "        encoder_in_dim = x.shape[2]\n",
     "        \n",
     "        decoder_in_dim = y.shape[2]\n",
-    "        decoder_out_seq_len = y.shape[1]\n",
+    "        decoder_out_seq_len = y.shape[1]                                                # This is most important that define the output length\n",
     "        \n",
     "        # tensor to store decoder outputs of each time step\n",
     "        outputs = torch.zeros(decoder_out_seq_len).double().to(device)\n",
