Seq2Seq to be updated

--- a/jupyterlab/Model_Seq2Seq.ipynb
+++ b/jupyterlab/Model_Seq2Seq.ipynb
@@ -191,6 +191,7 @@
     "NUM_LAYERS      = 2\n",
     "ENC_DROPOUT     = 0.1\n",
     "DEC_DROPOUT     = 0.1\n",
+    "DEC_OUTPUT_LEN  = 2\n",
     "\n",
     "\n",
     "class Seq2Seq(nn.Module):\n",
@@ -220,7 +221,8 @@
     "        encoder_in_dim = x.shape[2]\n",
     "        \n",
     "        decoder_in_dim = y.shape[2]\n",
-    "        decoder_out_seq_len = y.shape[1]                                                # This is most important that define the output length\n",
+    "        # decoder_out_seq_len = y.shape[1]                                                # This is most important that define the output length\n",
+    "        decoder_out_seq_len = DEC_OUTPUT_LEN                                              # This is most important that define the output length\n",
     "        \n",
     "        # tensor to store decoder outputs of each time step\n",
     "        outputs = torch.zeros(decoder_out_seq_len).double().to(device)\n",
